# ENGIne

./: CMakeLists.txt
Models/: scene.gltf
Models/Primitives/: Cube.fbx  Plane.glb  Sphere.glb
Scripts/: Rotating.cpp
Shaders/: default.frag  default.vert
headers/: Camera.hpp  CommonValues.hpp  DirectionalLight.hpp  EcsManager.hpp  Entity.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  PointLight.hpp  Renderer.hpp  Shader.hpp  SpotLight.hpp  Texture.hpp  UI.hpp  Utils.hpp  Window.hpp
src/: Camera.cpp  DirectionalLight.cpp  EcsManager.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  PointLight.cpp  Renderer.cpp  Shader.cpp  SpotLight.cpp  Texture.cpp  UI.cpp  Window.cpp  main.cpp
